# simple_actions

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/workflows/: cd.yml
src/: lib.rs  main.rs  style.css  uscities.csv
