[package]
name = "simple_actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
gio = "0.16.2"
gtk = { version = "0.5.0", package = "gtk4" }
once_cell = "1.15.0"
pango = "0.16.0"
rand = "0.8.5"
rang = "0.1.1"
serde = { version = "1.0.147", features = ["derive"] }
wasm-bindgen = "0.2.83"
